[#166106374] Admin sees `Chatbot Users` chart structure

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: $fontFamilyDefault;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: $black;
 }
 
 h1 {
