--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,12 @@
 $primary: #0275D8;
 $secondary: #2D2F34;
 $black: #000000;
+$borderGray: #D8D8D8;
+$black500: #373A3C;
+$orange500: #EC5F33;
+$gray500: #818A91;
+$green500: #1AB394;
 
-$font-family: 'Roboto', sans-serif;
+// Fonts
+$fontFamilyDefault: 'Roboto', sans-serif;
+$fontSizeNormal: 16px;
