[#166106378] Admin hovers on data point in `Chatbot Users` chart

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,10 +2,13 @@
 $primary: #0275D8;
 $secondary: #2D2F34;
 $black: #000000;
+$white: #FFFFFF;
 $borderGray: #D8D8D8;
+$boxShadowBlack: 0px 4px 8px rgba(0, 0, 0, 0.15);
 $black500: #373A3C;
 $orange500: #EC5F33;
 $gray500: #818A91;
+$gray600: #666666;
 $green500: #1AB394;
 
 // Fonts
