--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -13,3 +13,10 @@ h1 {
   line-height: 26px;
   color: $black;
 }
+
+h3 {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  color: $black;
+}
