--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,12 +5,17 @@ $black: #000000;
 $white: #FFFFFF;
 $borderGray: #D8D8D8;
 $boxShadowBlack: 0px 4px 8px rgba(0, 0, 0, 0.15);
+$hoverBoxShadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
 $black500: #373A3C;
 $orange500: #EC5F33;
 $gray500: #818A91;
 $gray600: #666666;
 $green500: #1AB394;
+$red500: #EC3333;
 
 // Fonts
 $fontFamilyDefault: 'Roboto', sans-serif;
+$fontSizeSmall10: 10px;
 $fontSizeNormal: 16px;
+$fontSizeLarge18: 18px;
+$fontSizeLarge36: 36px;
