--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,6 +19,7 @@ $red500: #EC3333;
 $fontFamilyDefault: 'Roboto', sans-serif;
 $fontSizeSmall10: 10px;
 $fontSizeSmall12: 12px;
+$fontSizeSmall14: 14px;
 $fontSizeNormal: 16px;
 $fontSizeLarge18: 18px;
 $fontSizeLarge36: 36px;
