--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $primary: #0275D8;
 $secondary: #2D2F34;
 $black: #000000;
 $white: #FFFFFF;
+$white10: #F9F9F9;
 $borderGray: #D8D8D8;
 $boxShadowBlack: 0px 4px 8px rgba(0, 0, 0, 0.15);
 $hoverBoxShadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
