[Content Performance Table] Summary page range

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $black500: #373A3C;
 $orange500: #EC5F33;
 $gray100: #DDDDDD;
 $gray200: #CCCCCC;
+$gray300: #999999;
 $gray500: #818A91;
 $gray600: #666666;
 $green500: #1AB394;
