--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -47,6 +47,46 @@ a {
   .content-details__action-header {
     width: 300px;
   }
+
+  // up arrow
+  tr > th[aria-sort]::after {
+    content: ' ' !important;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #2f2f2f;
+    position: absolute;
+    top: 3px;
+    opacity: 1 !important;
+  }
+
+  // down arrow
+  tr > th[aria-sort]::before {
+    content: " " !important;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #2f2f2f;
+    position: absolute;
+    right: 5px;
+    bottom: 15px;
+  }
+
+  // up arrow
+  tr > th[aria-sort][aria-sort="descending"]::after {
+    border-bottom-color: $primary;
+    content: ' ' !important;
+  }
+
+  // down arrow
+  tr > th[aria-sort][aria-sort="ascending"]::after {
+    content: ' ' !important;
+  }
+  tr > th[aria-sort][aria-sort="ascending"]::before {
+    border-top-color: $primary;
+  }
 }
 
 .app-tbody-tr {
