--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,4 +24,5 @@ $fontSizeSmall12: 12px;
 $fontSizeSmall14: 14px;
 $fontSizeNormal: 16px;
 $fontSizeLarge18: 18px;
+$fontSizeLarge20: 20px;
 $fontSizeLarge36: 36px;
