[#166319018] Admin can see the `Flow Diagram` page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,4 +26,5 @@ $fontSizeSmall14: 14px;
 $fontSizeNormal: 16px;
 $fontSizeLarge18: 18px;
 $fontSizeLarge20: 20px;
+$fontSizeLarge24: 24px;
 $fontSizeLarge36: 36px;
