Refactor: app-header-page-container

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -34,6 +34,10 @@ a {
   }
 }
 
+.app-header-page-container {
+  margin-bottom: 22px;
+}
+
 // custom bootstrap table styling
 .app-table {
   tbody > tr:nth-of-type(odd) {
